--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,38 +9,34 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # State Management - Riverpod v2 with Code Generation
+  # Kritik Paketler (Sürümleri Sabitliyoruz)
+  flutter_local_notifications: ^17.0.0
+  share_plus: ^9.0.0
+  screenshot: ^3.0.0
+  timezone: ^0.9.2
+  path_provider: ^2.1.2
+  # Diğerleri
+  flutter_animate: ^4.5.0
+  google_fonts: ^6.2.1
+  sensors_plus: ^5.0.0
+  permission_handler: ^11.3.0
+  flutter_tts: ^3.8.5
+  home_widget: ^0.7.0
+  vibration: ^1.9.0
+  
+  # Existing packages not mentioned in update but needed
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.3
-
-  # Backend - Supabase
   supabase_flutter: ^2.5.6
-
-  # Navigation - GoRouter
   go_router: ^13.2.2
-
-  # Animations - Flutter Animate
-  flutter_animate: ^4.5.0
-
-  # Typography - Google Fonts
-  google_fonts: ^6.1.0
-
-  # Location & Weather Data Collection
   geolocator: ^12.0.0
-
-  # JSON Serialization
   json_annotation: ^4.8.1
-
-  # Environment Variables
   flutter_dotenv: ^5.1.0
   google_generative_ai: ^0.4.7
-  share_plus: ^12.0.1
-  path_provider: ^2.1.5
-  screenshot: ^3.0.0
-  sensors_plus: ^7.0.0
   shared_preferences: ^2.5.4
   image_picker: ^1.2.1
+  camera: ^0.10.5 # Downgrading camera to be safe/compatible or keeping reasonable default if not specified
+
 
 dev_dependencies:
   flutter_test:
