--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   # Kritik Paketler (Sürümleri Sabitliyoruz)
   flutter_local_notifications: ^17.0.0
   share_plus: ^9.0.0
